plugins/kotlin/idea/tests/testData/checker/diagnosticsMessage/fullPackageFQNameOnVisiblityError.fir.kt
// WITH_STDLIB

package a.b

@kotlin.internal.<error descr="[INVISIBLE_REFERENCE] Symbol kotlin/internal/InlineOnly.InlineOnly is invisible">InlineOnly</error>
inline fun foo() {}
